@@ -1,3 +1,7 @@
+2003-07-17  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* BWman/ScrolledWindow.html: clarify management of embedded widget.
+
 2003-06-23  Damon Courtney <damon@unreality.com>
 	* combobox.tcl: Added a little better handling of keys in the
 	auto-complete.
